--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   "author": "Steven Anaya",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "classnames": "^2.2.6",
     "next": "9.3.0",
+    "node-sass": "^4.13.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "styled-components": "5.0.1"
+    "sass-resources-loader": "^2.0.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/react": "^5.3.17",
-    "@testing-library/react": "^10.0.1",
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.23",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.8.3"
   }
 }
