--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@types/classnames": "2.2.10",
     "@types/jest": "24.9.1",
     "@types/node": "12.12.30",
-    "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
     "axios": "^0.19.2",
@@ -21,14 +20,15 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "3.7.5"
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +46,13 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "5.3.17"
+    "@storybook/react": "5.3.17",
+    "@types/react": "^16.9.23",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
