--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,12 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "airbnb-typescript"
   ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "env": {
     "browser": true,
