--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript-eslint-parser": "^22.0.0"
   }
 }
