--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
   },
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-confusing-arrow": "off",
+    "implicit-arrow-linebreak": "off",
+    "react/prop-types": [0]
   },
   "settings": {
     "react": {
