--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1",
     "typescript": "3.8.3"
   },
   "scripts": {
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@storybook/react": "5.3.17",
     "@types/react": "^16.9.23",
+    "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
