--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-loading-skeleton": "^2.0.1",
+    "react-redux": "^7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1",
     "typescript": "3.8.3"
   },
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@storybook/react": "5.3.17",
     "@types/react": "^16.9.23",
+    "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
